--- a/themes/landscape/layout/_widget/about.ejs
+++ b/themes/landscape/layout/_widget/about.ejs
@@ -1,7 +1,7 @@
 <div class="widget-wrap" style="margin-bottom:-20px">
   <h3 class="widget-title">
     <a href="https://lzlz000.github.io">
-      <img src="/static/lzlz000-个人主页-brightgreen.svg">
+      <img src="/lzlz000-个人主页-brightgreen.svg">
     </a>
   </h3>
   <div class="widget">
