--- a/themes/landscape/layout/_widget/about.ejs
+++ b/themes/landscape/layout/_widget/about.ejs
@@ -1,12 +1,12 @@
 <div class="widget-wrap" style="margin-bottom:-20px">
-  <h3 class="widget-title">
+  <h3 style="margin-top:-5px;margin-bottom:5px;">
     <a href="https://lzlz000.github.io">
-      <img src="/lzlz000-个人主页-brightgreen.svg">
+      <img src="/lzlz000-个人主页-brightgreen.svg" height="25">
     </a>
   </h3>
   <div class="widget">
-    自闭中（；´д｀）ゞ
-    <br><br>
+    <div><%- config.blackboard %></div>
+    <br>
     Email   <a href="mailto:lzlz0x000@gmail.com">
       lzlz0x000@gmail.com
     </a>
