主题修改而我fluid，新的文章

--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -78,9 +78,10 @@
     border-bottom: 1px solid color-border
     padding: 10px 0
   blockquote
-    padding-left: 10px
-    color: #666
-    border-left: 3px #999 solid
+    font-family: font-serif
+    font-size: 1.4em
+    margin: line-height 20px
+    text-align: center
     footer
       font-size: font-size
       margin: line-height 0
